--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crudproject",
+  "name": "loginProject",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -21,4 +21,5 @@
   "devDependencies": {
     "nodemon": "^2.0.22"
   }
+
 }
